# xela_server_ros

./: cp_files_to.sh  readme.md
threed_viz/: CMakeLists.txt  package.xml
threed_viz/config/: arrow_rviz.rviz  node_show_war.config
threed_viz/data/: filter_x.txt  filter_y.txt  filter_z.txt  x_RMSE.txt  x_slope.txt  xela0_x.txt  xela0_y.txt  xela0_z.txt  xela10_x.txt  xela10_y.txt  xela10_z.txt  xela11_x.txt  xela11_y.txt  xela11_z.txt  xela12_x.txt  xela12_y.txt  xela12_z.txt  xela13_x.txt  xela13_y.txt  xela13_z.txt  xela14_x.txt  xela14_y.txt  xela14_z.txt  xela15_x.txt  xela15_y.txt  xela15_z.txt  xela1_x.txt  xela1_y.txt  xela1_z.txt  xela2_x.txt  xela2_y.txt  xela2_z.txt  xela3_x.txt  xela3_y.txt  xela3_z.txt  xela4_x.txt  xela4_y.txt  xela4_z.txt  xela5_x.txt  xela5_y.txt  (+16 more)
threed_viz/include/: draw_chart.h  modbus_crc16.h
threed_viz/launch/: arrow_show.launch  motion.launch
threed_viz/msg/: robotiq3f_feedback.msg  robotiq3fctrl.msg  stm32data.msg
threed_viz/scripts/: data_analysis.py  draw3d.py  draw3d_and_filter.py  draw3d_filter_stm32.py  draw_line_3d.py  fft_show.py  highpass_filter.py  plot_slope_rmse.py  robotiq3f_serial.py
threed_viz/src/: draw_chart.cpp  motion_control.cpp  serial_robotiq3f.cpp  subscriber_sensor.cpp
threed_viz/storage_data/: log.txt
threed_viz/storage_data/1/: xela_x.txt  xela_y.txt  xela_z.txt
threed_viz/storage_data/10/: xela_x.txt  xela_y.txt  xela_z.txt
threed_viz/storage_data/100/: filter_x.txt  filter_y.txt  filter_z.txt  xela_x.txt  xela_y.txt  xela_z.txt
threed_viz/storage_data/101/: filter_x.txt  filter_y.txt  filter_z.txt  xela_x.txt  xela_y.txt  xela_z.txt
threed_viz/storage_data/102/: filter_x.txt  filter_y.txt  filter_z.txt  xela_x.txt  xela_y.txt  xela_z.txt
threed_viz/storage_data/103/: filter_x.txt  filter_y.txt  filter_z.txt  xela_x.txt  xela_y.txt  xela_z.txt
threed_viz/storage_data/104/: filter_x.txt  filter_y.txt  filter_z.txt  xela_x.txt  xela_y.txt  (+1 more)
(+13782 files in other folders)
